scss/multiple-sample-view-component.scss
// ----------------------------------------------
// Styles for the react sample-view.jsx component
// ----------------------------------------------

@import 'mixins.scss';

.panel.sample {
    flex-basis: 80%;
    flex-direction: column;
    align-items: stretch;
    overflow-y: auto;
    background: #f5f5f5;
    position: relative;
    flex-grow: 1;

    & > .loader-outer {
        z-index: 15;
    }

    .panel-inner {
        flex-direction: column;
        align-items: stretch;
        flex-grow: 1;

        .header {
            padding: 10px;
            font-size: 20px;
            font-weight: 200;
            align-items: stretch;
            flex-shrink: 0;
            flex-direction: column;
            background: #fdfdfd;
            border-bottom: 1px solid #eee;
            flex-shrink: 0;

            .upper {
                font-size: 12px;
                color: #666;

                a {
                    cursor: pointer;
                    text-decoration: underline;
                    margin-left: 5px;

                    &:hover {
                        color: $highlight-colour;
                    }
                }
            }

            .lower {
                flex-direction: column;
                align-items: flex-start;

                .title {
                    flex-direction: row;
                    align-items: center;
                    margin-top: 5px;
                    flex-grow: 1;

                    .text {
                        margin-right: 30px;
                    }

                    & > input {
                        outline: none;
                        border: 2px solid #eee;
                        padding: 15px;
                        font-size: inherit;
                        font-weight: 600;
                    }

                    .file-actions {

                        .download {
                            font: 600 12px 'Open Sans';
                            padding: 7px 11px;
                            cursor: pointer;
                            align-items: center;
                            @include backgroundHover(#ddd);
                            @include backgroundClick(#ddd);

                            i {
                                font-size: 18px;
                                margin-right: 5px;
                            }
                        }
                    }
                }

                .dropdown-inline {
                    font-size: 14px;
                }

                .counts {
                    margin-top: 5px;
                    font-weight: 600;
                    font-size: 14px;
                    color: #777;
                    display: block;
                }
            }

            &.gates {

                .lower {
                    align-items: center;

                    .dropdown-inline {
                        margin-left: 15px;
                        font-size: 14px;
                        width: 400px;
                    }
                }
            }
        } // & > .header

        .filters {
            background: #fff;
            border-bottom: 2px solid #ddd;
            padding: 10px;
            align-items: center;
            flex-shrink: 0;
            font-size: 13px;

            .filter-text-outer {
                margin-right: 15px;

                .multi-select-dropdown {
                    width: 450px;

                    .selected-item {
                        padding: 5px;
                        background: #eee;
                        margin-right: 8px;
                        text-wrap: nowrap;
                        flex-shrink: 0;
                        align-items: center;
                        cursor: default;

                        i {
                            margin-left: 7px;
                            font-size: 15px;
                            cursor: pointer;
                            @include foregroundHover($red-colour);
                            @include foregroundClick($red-colour);
                        }
                    }
                }
            }

            .hide-ungated {
                align-items: center;
                cursor: pointer;
                flex-grow: 1;
                @include foregroundHover(#999, 10%);
                @include foregroundClick(#999, 20%);

                &:active, &.active {
                    @include foregroundHover($highlight-colour);
                    @include foregroundClick($highlight-colour);
                }

                i {
                    font-size: 18px;
                    margin-right: 5px;
                }
            } // .hide-ungated

            .dimensions {
                align-items: center;
                margin-left: 15px;
                font-size: 13px;

                input {
                    font-size: 13px;
                    padding: 8px 15px;
                    border: 1px solid #eee;
                    width: 200px;
                    margin-right: 15px;
                }

                .text {
                    margin-right: 15px;
                }

                input {
                    width: 60px;
                }
            }
        } // .filters
    } // .panel-inner
} // .panel.sample

